--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,12 @@
   text-align: center;
 }
 
-h2 {
+header h3 {
   font-size: 50px;
   color: rgb(191, 10, 20);
+}
+
+footer h3 {
+  font-size: 30px;
+  color: red;
 }
