--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,4 +1,251 @@
-h1 {
-    font-size: 50px;
-    color: green;
+
+header {
+    background-image: url(./Images/main-bg.svg);
+    background-size: cover;
 }
+
+header nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-bottom: 33rem;
+}
+
+nav h2 {
+    color: #fff;
+    font-size: 24px;
+}
+
+nav ul {
+    display: flex;
+    justify-content: space-between;
+    width: 600px;
+}
+
+nav ul li {
+    list-style: none;
+}
+
+nav ul li a {
+    color: #fff;
+    font-size: 16px;
+    text-decoration: none;
+}
+
+.header-texts {
+    text-align: center;
+    padding-bottom: 150px;
+}
+
+.header-texts h1 {
+    font-weight: lighter;
+    font-size: 50px;
+    color: #fff;
+    padding-bottom: 10px;
+}
+
+.header-texts p {
+    font-weight: lighter;
+    font-size: 30px;
+    color: #fff;
+    padding-bottom: 30px;
+}
+
+.header-texts p span {
+    text-transform: uppercase;
+}
+
+.header-texts button {
+    padding: 20px 35px;
+    font-size: 16px;
+    background-color: #3E7BFA;
+    cursor: pointer;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+}
+
+/* ABOUT */
+
+
+
+
+
+.feature-container .title {
+    text-align: center;
+}
+
+.feature-container h3 {
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-size: 40px;
+    color: #3E7BFA;
+}
+
+.feature-boxes {
+    display: flex;
+    justify-content: space-around;
+}
+
+.feature-boxes .box {
+    width: 288px;
+}
+
+.box .top {
+    background: #3E7BFA;
+    color: #fff;
+    text-align: center;
+    border-radius: 15px;
+    padding-top: 50px;
+    z-index: 2;
+}
+
+.box .top i {
+    font-size: 30px;
+}
+
+.box .top p{
+    font-size: 20px;
+    padding-bottom: 100px;
+}
+
+.box .bottom {
+    position: relative;
+    display: flex;
+    top: -15%;
+    background: #fff;
+    height: 20rem;
+    /* margin-top: 50px; */
+    align-items: center;
+    border-radius: 30px 30px 15px 15px;
+    box-shadow: 0px 6px 8px rgba(35, 26, 26, 0.5);
+}
+
+.bottom .center-text {
+    margin-left: auto;
+    margin-right: auto;
+    width: 260px;
+}
+
+.box .bottom p {
+    font-size: 16px;
+    color: #454545;
+    line-height: 30px;
+}
+
+
+/* HOW IT WORKS */
+
+.works-container {
+    background-color: rgba(84, 139, 228, 0.1);
+    padding-bottom: 30px;
+}
+
+.works-container .title {
+    text-align: center;
+}
+
+.title h2 {
+    text-transform: uppercase;
+    font-weight: lighter;
+    font-size: 40px;
+    color: #3E7BFA;
+    padding-top: 70px;
+}
+
+.works-bag {
+    width: 90%;
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.item-img-left, .item-img-right {
+    margin-bottom: 100px;
+}
+
+.item-img-right h2 {
+    font-size: 160px;
+    color: #CECFD9;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.item-img-right .content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.item-img-left h2 {
+    display: flex;
+    justify-content: flex-end;
+    padding-bottom: 20px;
+    font-size: 160px;
+    color: #CECFD9;
+    margin-block-start: 0;
+    margin-block-end: 0;
+}
+
+.item-img-left .content {
+    display: flex;
+    justify-content: space-between;
+}
+
+.content p {
+    display: flex;
+    align-items: center;
+    font-size: 24px;
+    width: 600px;
+}
+
+.content img {
+    width: 700px;
+    height: 500px;
+}
+
+/* TESTIMONIAL */
+
+.testimonials-container .heading {
+    margin-top: -49%;
+    margin-left: 250px;
+    width: 300px;
+}
+
+.testimonials-container .heading h2 {
+    font-weight: lighter;
+    font-size: 64px;
+}
+.testimonials-container .top-box {
+    width: 390px;
+    height: 274px;
+    background: #6698FA;
+    opacity: 0.6;
+    margin-left: 27%;
+}
+
+.testimonials-container .left-box {
+    width: 249px;
+    height: 660px;
+    background: #6698FA;
+    opacity: 0.6;
+    margin-top: 100px;
+}
+
+.testimonials-container .icon-box {
+    /* position: relative; */
+    margin-top: -23%;
+    margin-left: 110px;
+    width: 150px;
+    height: 150px;
+    background: #B1D4E5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* border: 1px solid red; */
+}
+
+.testimonials-container .icon-box i {
+    font-size: 60px;
+    color: #000099;
+}
+
