--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -118,7 +118,7 @@ ul button {
     width: 288px;
 }
 
-.box .top {
+/* .box .top {
     background: #3E7BFA;
     color: #fff;
     text-align: center;
@@ -158,7 +158,7 @@ ul button {
     font-size: 16px;
     color: #454545;
     line-height: 30px;
-}
+} */
 
 
 /* HOW IT WORKS */
@@ -476,7 +476,7 @@ ul button {
         border-radius: 10px;
     }
 
-    .feature-boxes{
+    /* .feature-boxes{
         flex-direction: column;
         align-items: center;
     }
@@ -489,11 +489,7 @@ ul button {
     .feature-boxes .box {
         margin-bottom: 50px;
         width: 320px;
-    }
-
-    .box .bottom {
-        margin-top: -15%;
-    }
+    } */
 
     .item-img-right .content, .item-img-left .content {
         flex-direction: column;
