bug:home-page-modified

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,6 +5,8 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
 header {
     background-image: url(./Images/main-bg.svg);
     background-size: cover;
@@ -110,24 +112,6 @@ ul button {
     color: #3E7BFA;
 }
 
-/* .icon-bag {
-    position: absolute;
-    top: 79%;
-    left: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    background: #3E7BFA;
-    color: #fff;
-}
-
-.icon-bag i {
-    font-size: 20px;
-} */
-
 .hamburger {
     display: none;
 }
@@ -152,7 +136,7 @@ ul button {
 }
 
 .about-container .about-text {
-    width: 25%;
+    width: 35%;
 }
 
 .about-container .about-text p {
@@ -303,14 +287,6 @@ ul button {
 
 /* TESTIMONIAL */
 
-.testimonials-container .heading {
-
-}
-
-.testimonials-container .heading h2 {
-
-}
-
 .testimonials-container i {
     font-size: 60px;
     color: #000099;
@@ -319,7 +295,6 @@ ul button {
 /* IMAGE SLIDE*/
 .slider {
     position: relative;
-    /* display: inline-flex; */
     top: 150px;
 }
 
@@ -397,6 +372,16 @@ ul button {
 }
 
 @media screen and (max-width: 1000px) {
+
+    .about-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .about-container .about-text {
+        padding-top: 30px;
+        width: 90%;
+    }
 
     nav h2 {
         /* float: left; */
